Added some more province files and moved some files

--- a/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Aldor_Sovereign.html">
+      Aldor_Sovereign
+     </a>
+    </li>
+    <li>
      <a href="img/Aldor_Sovereign.jpg">
       img/Aldor_Sovereign.jpg
      </a>
