--- a/campaign/locations/regions/Matella/Bakaria/index.html
+++ b/campaign/locations/regions/Matella/Bakaria/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Bakaria.html">
+      Bakaria
+     </a>
+    </li>
+    <li>
      <a href="img/Bakaria.jpg">
       img/Bakaria.jpg
      </a>
