--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
@@ -59,7 +59,13 @@
    <p>
     The Elda Reem Passlands, situated just northwest of the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
-     Mentassa_Plains</a>, encompass a diverse and rugged region renowned for its unique terrain. Dominating the southeastern portion of the Passlands is the Utengho Marshlands, a sprawling expanse of marshy landscapes teeming with vibrant flora and fauna. To the north and west, a majestic mountain range stands proudly, guarding the region and offering a wealth of precious crystals and gemstones within its depths. However, traversing these mountains can be perilous, as they are inhabited by fearsome dragons, unique creatures, and cunning bandits seeking to exploit unwary travelers. On the opposite side of the Passlands lies the Gharoni Highlands, with an elevated plateau and meadows characterized by its own distinct features and challenges. Nestled to the northeastern reaches of the Passlands, the rugged mountainous region of Loch Modar serves as a revered home to a resilient community of dwarves. As adventurers venture into the Elda Reem Passlands, they will encounter an array of breathtaking landscapes, formidable obstacles, and untold possibilities, where every step brings both danger and the promise of remarkable treasures.
+     Mentassa_Plains</a>, encompass a diverse and rugged region renowned for its unique terrain. Dominating the southeastern portion of the Passlands is the Utengho Marshlands, a sprawling expanse of marshy landscapes teeming with vibrant flora and fauna. To the north and west, a majestic mountain range stands proudly, guarding the region and offering a wealth of precious crystals and gemstones within its depths. However, traversing these mountains can be perilous, as they are inhabited by fearsome dragons, unique creatures, and cunning bandits seeking to exploit unwary travelers. On the opposite side of the Passlands lies the
+    <a href="../Gharoni_Highlands/Gharoni_Highlands.html">
+     Gharoni Highlands</a>, with an elevated plateau and meadows characterized by its own distinct features and challenges. Nestled to the northeastern reaches of the Passlands, the rugged mountainous region of
+    <a href="../Loch_Modar/Loch_Modar.html">
+     Loch Modar
+    </a>
+    serves as a revered home to a resilient community of dwarves. As adventurers venture into the Elda Reem Passlands, they will encounter an array of breathtaking landscapes, formidable obstacles, and untold possibilities, where every step brings both danger and the promise of remarkable treasures.
    </p>
   </div>
   <hr/>
@@ -98,7 +104,11 @@
     The inhabitants of these frontier settlements are a hardy and self-reliant mix of individuals from various races and backgrounds. They have learned to adapt to the harsh conditions and have developed specialized skills and knowledge suited for survival in the rugged Passlands. These communities thrive on trade, catering to the needs of travelers and serving as hubs of commerce and exchange.
    </p>
    <p>
-    In contrast, the interior of the Elda Reem Passlands is relatively untamed and sparsely inhabited. The harsh terrain, treacherous paths, and presence of dangerous creatures make it challenging for permanent settlements to flourish. However, scattered throughout the heart of the Passlands, along the main river that winds its way through the region, some small communities have established themselves, primarily serving as rest stops and resupply points for those journeying toward the Gharoni Highlands.
+    In contrast, the interior of the Elda Reem Passlands is relatively untamed and sparsely inhabited. The harsh terrain, treacherous paths, and presence of dangerous creatures make it challenging for permanent settlements to flourish. However, scattered throughout the heart of the Passlands, along the main river that winds its way through the region, some small communities have established themselves, primarily serving as rest stops and resupply points for those journeying toward the
+    <a href="../Gharoni_Highlands/Gharoni_Highlands.html">
+     Gharoni Highlands
+    </a>
+    .
    </p>
    <p>
     The demographics of the Elda Reem Passlands reflect a population that embraces the freedom and solitude of the untamed wilderness. They are a resourceful and resilient people who have found a delicate balance between settlement and exploration, focusing on the outskirts of the province while maintaining a connection to the heart of the Passlands through the vital river routes.
@@ -190,7 +200,11 @@
     Transportation within the Elda Reem Passlands is primarily facilitated by the main river that flows through the region, as well as a network of paths and trails that traverse the mountain ranges and passland areas. These transportation routes serve as vital lifelines for both the local inhabitants and the travelers passing through the region.
    </p>
    <p>
-    The main river, originating from the south and running northward, acts as a crucial waterway for transportation within the Passlands. It provides a relatively smoother and more efficient mode of travel compared to the rugged and challenging terrain of the surrounding mountains and passlands. Small boats, rafts, or other watercraft are commonly used to navigate the river, allowing for the transportation of goods and people from the southern reaches of the Passlands to the Gharoni Highlands and vice versa. The river serves as a vital link between these areas, facilitating trade and communication.
+    The main river, originating from the south and running northward, acts as a crucial waterway for transportation within the Passlands. It provides a relatively smoother and more efficient mode of travel compared to the rugged and challenging terrain of the surrounding mountains and passlands. Small boats, rafts, or other watercraft are commonly used to navigate the river, allowing for the transportation of goods and people from the southern reaches of the Passlands to the
+    <a href="../Gharoni_Highlands/Gharoni_Highlands.html">
+     Gharoni Highlands
+    </a>
+    and vice versa. The river serves as a vital link between these areas, facilitating trade and communication.
    </p>
    <p>
     In addition to the river, a network of paths and trails crisscrosses the Passlands, connecting the various settlements and offering alternative means of transportation. These paths are often rugged and demanding, requiring a degree of skill, endurance, and familiarity with the terrain to traverse safely. Local guides may accompany travelers, providing knowledge about the best routes, avoiding hazards, and ensuring a smoother journey.
