--- a/campaign/locations/regions/Matella/Gharoni_Highlands/index.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Gharoni_Highlands.html">
+      Gharoni_Highlands
+     </a>
+    </li>
+    <li>
      <a href="img/Gharoni_Highlands.jpg">
       img/Gharoni_Highlands.jpg
      </a>
