--- a/campaign/locations/regions/Matella/Loch_Modar/index.html
+++ b/campaign/locations/regions/Matella/Loch_Modar/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Loch_Modar.html">
+      Loch_Modar
+     </a>
+    </li>
+    <li>
      <a href="img/Loch_Modar.jpg">
       img/Loch_Modar.jpg
      </a>
