--- a/campaign/locations/regions/Matella/Matella.html
+++ b/campaign/locations/regions/Matella/Matella.html
@@ -287,7 +287,9 @@
       </a>
      </li>
      <li>
-      Aldor Sovereign
+      <a href="Aldor_Sovereign/Aldor_Sovereign.html">
+       Aldor Sovereign
+      </a>
      </li>
      <li>
       <a href="The_Ashenlands/The_Ashenlands.html">
@@ -295,7 +297,9 @@
       </a>
      </li>
      <li>
-      Bakaria
+      <a href="Bakaria/Bakaria.html">
+       Bakaria
+      </a>
      </li>
      <li>
       <a href="Daystone_Isle/Daystone_Isle.html">
@@ -313,10 +317,14 @@
       </a>
      </li>
      <li>
-      Gharoni Highlands
+      <a href="Gharoni_Highlands/Gharoni_Highlands.html">
+       Gharoni Highlands
+      </a>
      </li>
      <li>
-      Loch Modar
+      <a href="Loch_Modar/Loch_Modar.html">
+       Loch Modar
+      </a>
      </li>
      <li>
       <a href="Mentassa_Plains/Mentassa_Plains.html">
@@ -324,7 +332,9 @@
       </a>
      </li>
      <li>
-      Tinco Merz
+      <a href="Tinco_Merz/Tinco_Merz.html">
+       Tinco Merz
+      </a>
      </li>
      <li>
       <a href="Visterguarde/Visterguarde.html">
@@ -332,7 +342,9 @@
       </a>
      </li>
      <li>
-      Zenitha
+      <a href="Zenitha/Zenitha.html">
+       Zenitha
+      </a>
      </li>
      <li>
       <a href="Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
@@ -350,7 +362,9 @@
    <p>
     <ul>
      <li>
-      Gostee Wilderness
+      <a href="Gostee_Wilderness/Gostee_Wilderness.html">
+       Gostee Wilderness
+      </a>
      </li>
      <li>
       Riava Plateau
