--- a/campaign/locations/regions/Matella/Tinco_Merz/index.html
+++ b/campaign/locations/regions/Matella/Tinco_Merz/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Tinco_Merz.html">
+      Tinco_Merz
+     </a>
+    </li>
+    <li>
      <a href="img/Tinco_Merz.jpg">
       img/Tinco_Merz.jpg
      </a>
