--- a/campaign/locations/regions/Matella/Visterguarde/Visterguarde.html
+++ b/campaign/locations/regions/Matella/Visterguarde/Visterguarde.html
@@ -59,7 +59,15 @@
    <p class="first-paragraph">
     Visterguarde is a province located to the northwest of
     <a href="../Eldara/Eldara.html">
-     Eldara</a>, bordered by the vast ocean to the south and west. To the north is a mountain range defining the border of Bakaria and to the Northeast is the rocky and volcanic regions of Tinco Merz. This region shares similarities with
+     Eldara</a>, bordered by the vast ocean to the south and west. To the north is a mountain range defining the border of
+    <a href="../Bakaria/Bakaria.html">
+     Bakaria
+    </a>
+    and to the Northeast is the rocky and volcanic regions of
+    <a href="../Tinco_Merz/Tinco_Merz.html">
+     Tinco Merz
+    </a>
+    . This region shares similarities with
     <a href="../Eldara/Eldara.html">
      Eldara
     </a>
