--- a/campaign/locations/regions/Matella/Zenitha/index.html
+++ b/campaign/locations/regions/Matella/Zenitha/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Zenitha.html">
+      Zenitha
+     </a>
+    </li>
+    <li>
      <a href="img/Zenitha.png">
       img/Zenitha.png
      </a>
