--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html
@@ -61,7 +61,9 @@
     <a href="../Alderpine/Alderpine.html">
      Alderpine
     </a>
-    and east of Loch Modar, stands as a realm steeped in a rich tapestry of traditions, governance, and diverse inhabitants. Ruled by the illustrious Zhu Lang Family, whose lineage has ascended to the position of supreme authority, the province embodies a unique blend of cultural practices, customs, and beliefs.
+    and east of
+    <a href="../Loch_Modar/Loch_Modar.html">
+     Loch Modar</a>, stands as a realm steeped in a rich tapestry of traditions, governance, and diverse inhabitants. Ruled by the illustrious Zhu Lang Family, whose lineage has ascended to the position of supreme authority, the province embodies a unique blend of cultural practices, customs, and beliefs.
    </p>
    <p>
     The Zhu Lang Dynasty Province is home to a varied population, comprising a larger than usual population of tieflings, genasi, and firblogs, among others. These different races have found harmony and acceptance within the province's borders, fostering a sense of unity and shared identity. The tieflings, with their infernal heritage, bring an air of mystique and resilience, while the genasi, embodying the elemental forces of nature, contribute their affinity for magic and adaptability. The firblogs, with their deep connection to the natural world, infuse the province with their wisdom and affinity for the land.
@@ -278,7 +280,10 @@
    <p>
     <ul>
      <li>
-      Gostee Wilderness: A cursed area of dead and haunted forest nestled against the mountains to the southwest of the Zhu Lang Dynasty.
+      <a href="Gostee_Wilderness.html">
+       Gostee Wilderness
+      </a>
+      : A cursed area of dead and haunted forest nestled against the mountains to the southwest of the Zhu Lang Dynasty.
      </li>
      <li>
       Spicatus Venenorum Woods (Spicatus meaning "spiked" and Venenorum meaning "of venom")
