--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/img/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/img/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Gostee_Wilderness.jpg">
+      Gostee_Wilderness.jpg
+     </a>
+    </li>
+    <li>
      <a href="Zhu_Lang_Dynasty.jpg">
       Zhu_Lang_Dynasty.jpg
      </a>
