--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
@@ -51,8 +51,18 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Gostee_Wilderness.html">
+      Gostee_Wilderness
+     </a>
+    </li>
+    <li>
      <a href="Zhu_Lang_Dynasty.html">
       Zhu_Lang_Dynasty
+     </a>
+    </li>
+    <li>
+     <a href="img/Gostee_Wilderness.jpg">
+      img/Gostee_Wilderness.jpg
      </a>
     </li>
     <li>
