--- a/campaign/locations/regions/Matella/img/index.html
+++ b/campaign/locations/regions/Matella/img/index.html
@@ -56,6 +56,26 @@
      </a>
     </li>
     <li>
+     <a href="Matella_Adventure.jpg">
+      Matella_Adventure.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Matella_Battlemap.jpg">
+      Matella_Battlemap.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Matella_Grayhawk.jpg">
+      Matella_Grayhawk.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Matella_Pastal_pro.jpg">
+      Matella_Pastal_pro.jpg
+     </a>
+    </li>
+    <li>
      <a href="Matella_labeled.jpg">
       Matella_labeled.jpg
      </a>
