--- a/campaign/locations/regions/Matella/index.html
+++ b/campaign/locations/regions/Matella/index.html
@@ -86,11 +86,6 @@
      </a>
     </li>
     <li>
-     <a href="Gostee_Wilderness/index.html">
-      Gostee_Wilderness
-     </a>
-    </li>
-    <li>
      <a href="Loch_Modar/index.html">
       Loch_Modar
      </a>
@@ -148,6 +143,26 @@
     <li>
      <a href="img/Matella.jpg">
       img/Matella.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/Matella_Adventure.jpg">
+      img/Matella_Adventure.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/Matella_Battlemap.jpg">
+      img/Matella_Battlemap.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/Matella_Grayhawk.jpg">
+      img/Matella_Grayhawk.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/Matella_Pastal_pro.jpg">
+      img/Matella_Pastal_pro.jpg
      </a>
     </li>
     <li>
