Improved index files

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -52,62 +52,62 @@
    <ul>
     <li>
      <a href="aria_thistlewood.jpg">
-      aria_thistlewood.jpg
+      aria thistlewood.jpg
      </a>
     </li>
     <li>
      <a href="arlo_ironheart.jpg">
-      arlo_ironheart.jpg
+      arlo ironheart.jpg
      </a>
     </li>
     <li>
      <a href="astrid_windrider.jpg">
-      astrid_windrider.jpg
+      astrid windrider.jpg
      </a>
     </li>
     <li>
      <a href="cedric_blackthorn.jpg">
-      cedric_blackthorn.jpg
+      cedric blackthorn.jpg
      </a>
     </li>
     <li>
      <a href="corvus_stormrider.jpg">
-      corvus_stormrider.jpg
+      corvus stormrider.jpg
      </a>
     </li>
     <li>
      <a href="elysia_moonwhisper.jpg">
-      elysia_moonwhisper.jpg
+      elysia moonwhisper.jpg
      </a>
     </li>
     <li>
      <a href="kaelar_stormcaller.jpg">
-      kaelar_stormcaller.jpg
+      kaelar stormcaller.jpg
      </a>
     </li>
     <li>
      <a href="lirael_forestwind.jpg">
-      lirael_forestwind.jpg
+      lirael forestwind.jpg
      </a>
     </li>
     <li>
      <a href="lyra_silverwind.jpg">
-      lyra_silverwind.jpg
+      lyra silverwind.jpg
      </a>
     </li>
     <li>
      <a href="thorin_stonehammer.jpg">
-      thorin_stonehammer.jpg
+      thorin stonehammer.jpg
      </a>
     </li>
     <li>
      <a href="thorne_ironfist.jpg">
-      thorne_ironfist.jpg
+      thorne ironfist.jpg
      </a>
     </li>
     <li>
      <a href="valen_shadowborn.jpg">
-      valen_shadowborn.jpg
+      valen shadowborn.jpg
      </a>
     </li>
    </ul>
