--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -52,37 +52,37 @@
    <ul>
     <li>
      <a href="aria_thistlewood.html">
-      aria_thistlewood
+      aria thistlewood
      </a>
     </li>
     <li>
      <a href="arlo_ironheart.html">
-      arlo_ironheart
+      arlo ironheart
      </a>
     </li>
     <li>
      <a href="astrid_windrider.html">
-      astrid_windrider
+      astrid windrider
      </a>
     </li>
     <li>
      <a href="cedric_blackthorn.html">
-      cedric_blackthorn
+      cedric blackthorn
      </a>
     </li>
     <li>
      <a href="corvus_stormrider.html">
-      corvus_stormrider
+      corvus stormrider
      </a>
     </li>
     <li>
      <a href="elara_nightshade.html">
-      elara_nightshade
+      elara nightshade
      </a>
     </li>
     <li>
      <a href="elysia_moonwhisper.html">
-      elysia_moonwhisper
+      elysia moonwhisper
      </a>
     </li>
     <li>
@@ -147,37 +147,37 @@
     </li>
     <li>
      <a href="kaelar_stormcaller.html">
-      kaelar_stormcaller
+      kaelar stormcaller
      </a>
     </li>
     <li>
      <a href="lirael_forestwind.html">
-      lirael_forestwind
+      lirael forestwind
      </a>
     </li>
     <li>
      <a href="lyra_silverwind.html">
-      lyra_silverwind
+      lyra silverwind
      </a>
     </li>
     <li>
      <a href="seraphina_thornvale.html">
-      seraphina_thornvale
+      seraphina thornvale
      </a>
     </li>
     <li>
      <a href="thorin_stonehammer.html">
-      thorin_stonehammer
+      thorin stonehammer
      </a>
     </li>
     <li>
      <a href="thorne_ironfist.html">
-      thorne_ironfist
+      thorne ironfist
      </a>
     </li>
     <li>
      <a href="valen_shadowborn.html">
-      valen_shadowborn
+      valen shadowborn
      </a>
     </li>
    </ul>
