--- a/campaign/creatures/monsters/img/index.html
+++ b/campaign/creatures/monsters/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="stoneshaper_golem.jpg">
-      stoneshaper_golem.jpg
+      stoneshaper golem.jpg
      </a>
     </li>
    </ul>
