--- a/campaign/creatures/monsters/index.html
+++ b/campaign/creatures/monsters/index.html
@@ -57,7 +57,7 @@
     </li>
     <li>
      <a href="stoneshaper_golem.html">
-      stoneshaper_golem
+      stoneshaper golem
      </a>
     </li>
    </ul>
