--- a/campaign/locations/regions/Matella/Aldor_Sovereign/img/index.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Aldor_Sovereign.jpg">
-      Aldor_Sovereign.jpg
+      Aldor Sovereign.jpg
      </a>
     </li>
    </ul>
