--- a/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Aldor_Sovereign.html">
-      Aldor_Sovereign
+      Aldor Sovereign
      </a>
     </li>
     <li>
