--- a/campaign/locations/regions/Matella/Daystone_Isle/img/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Daystone_Isle.jpg">
-      Daystone_Isle.jpg
+      Daystone Isle.jpg
      </a>
     </li>
    </ul>
