--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/index.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Elda_Reem_Passlands.html">
-      Elda_Reem_Passlands
+      Elda Reem Passlands
      </a>
     </li>
     <li>
