--- a/campaign/locations/regions/Matella/Gharoni_Highlands/img/index.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Gharoni_Highlands.jpg">
-      Gharoni_Highlands.jpg
+      Gharoni Highlands.jpg
      </a>
     </li>
    </ul>
