--- a/campaign/locations/regions/Matella/Gharoni_Highlands/index.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Gharoni_Highlands.html">
-      Gharoni_Highlands
+      Gharoni Highlands
      </a>
     </li>
     <li>
