--- a/campaign/locations/regions/Matella/Mentassa_Plains/img/index.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Mentassa_Plains.jpg">
-      Mentassa_Plains.jpg
+      Mentassa Plains.jpg
      </a>
     </li>
    </ul>
