--- a/campaign/locations/regions/Matella/Mentassa_Plains/index.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Mentassa_Plains.html">
-      Mentassa_Plains
+      Mentassa Plains
      </a>
     </li>
     <li>
