--- a/campaign/locations/regions/Matella/Sifariato_Mountains/img/index.html
+++ b/campaign/locations/regions/Matella/Sifariato_Mountains/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Sifariato_Mountains.jpg">
-      Sifariato_Mountains.jpg
+      Sifariato Mountains.jpg
      </a>
     </li>
    </ul>
