--- a/campaign/locations/regions/Matella/The_Ashenlands/img/index.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="The_Ashenlands.jpg">
-      The_Ashenlands.jpg
+      The Ashenlands.jpg
      </a>
     </li>
    </ul>
