--- a/campaign/locations/regions/Matella/The_Ashenlands/index.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="The_Ashenlands.html">
-      The_Ashenlands
+      The Ashenlands
      </a>
     </li>
     <li>
