--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/img/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/img/index.html
@@ -52,12 +52,12 @@
    <ul>
     <li>
      <a href="Gostee_Wilderness.jpg">
-      Gostee_Wilderness.jpg
+      Gostee Wilderness.jpg
      </a>
     </li>
     <li>
      <a href="Zhu_Lang_Dynasty.jpg">
-      Zhu_Lang_Dynasty.jpg
+      Zhu Lang Dynasty.jpg
      </a>
     </li>
    </ul>
