--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
@@ -52,12 +52,12 @@
    <ul>
     <li>
      <a href="Gostee_Wilderness.html">
-      Gostee_Wilderness
+      Gostee Wilderness
      </a>
     </li>
     <li>
      <a href="Zhu_Lang_Dynasty.html">
-      Zhu_Lang_Dynasty
+      Zhu Lang Dynasty
      </a>
     </li>
     <li>
