--- a/campaign/locations/regions/Matella/img/index.html
+++ b/campaign/locations/regions/Matella/img/index.html
@@ -51,33 +51,33 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Matella.jpg">
-      Matella.jpg
-     </a>
-    </li>
-    <li>
      <a href="Matella_Adventure.jpg">
-      Matella_Adventure.jpg
+      Matella Adventure.jpg
      </a>
     </li>
     <li>
      <a href="Matella_Battlemap.jpg">
-      Matella_Battlemap.jpg
+      Matella Battlemap.jpg
      </a>
     </li>
     <li>
      <a href="Matella_Grayhawk.jpg">
-      Matella_Grayhawk.jpg
+      Matella Grayhawk.jpg
      </a>
     </li>
     <li>
      <a href="Matella_Pastal_pro.jpg">
-      Matella_Pastal_pro.jpg
+      Matella Pastal pro.jpg
      </a>
     </li>
     <li>
      <a href="Matella_labeled.jpg">
-      Matella_labeled.jpg
+      Matella labeled.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Matella.jpg">
+      Matella.jpg
      </a>
     </li>
    </ul>
