--- a/campaign/locations/regions/Matella/index.html
+++ b/campaign/locations/regions/Matella/index.html
@@ -57,7 +57,7 @@
     </li>
     <li>
      <a href="Aldor_Sovereign/index.html">
-      Aldor_Sovereign
+      Aldor Sovereign
      </a>
     </li>
     <li>
@@ -67,12 +67,12 @@
     </li>
     <li>
      <a href="Daystone_Isle/index.html">
-      Daystone_Isle
+      Daystone Isle
      </a>
     </li>
     <li>
      <a href="Elda_Reem_Passlands/index.html">
-      Elda_Reem_Passlands
+      Elda Reem Passlands
      </a>
     </li>
     <li>
@@ -82,12 +82,12 @@
     </li>
     <li>
      <a href="Gharoni_Highlands/index.html">
-      Gharoni_Highlands
+      Gharoni Highlands
      </a>
     </li>
     <li>
      <a href="Loch_Modar/index.html">
-      Loch_Modar
+      Loch Modar
      </a>
     </li>
     <li>
@@ -97,17 +97,17 @@
     </li>
     <li>
      <a href="Mentassa_Plains/index.html">
-      Mentassa_Plains
+      Mentassa Plains
      </a>
     </li>
     <li>
      <a href="Riava_Plateau/index.html">
-      Riava_Plateau
+      Riava Plateau
      </a>
     </li>
     <li>
      <a href="Sifariato_Mountains/index.html">
-      Sifariato_Mountains
+      Sifariato Mountains
      </a>
     </li>
     <li>
@@ -117,12 +117,12 @@
     </li>
     <li>
      <a href="The_Ashenlands/index.html">
-      The_Ashenlands
+      The Ashenlands
      </a>
     </li>
     <li>
      <a href="Tinco_Merz/index.html">
-      Tinco_Merz
+      Tinco Merz
      </a>
     </li>
     <li>
@@ -137,7 +137,7 @@
     </li>
     <li>
      <a href="Zhu_Lang_Dynasty/index.html">
-      Zhu_Lang_Dynasty
+      Zhu Lang Dynasty
      </a>
     </li>
     <li>
