--- a/campaign/spells/index.html
+++ b/campaign/spells/index.html
@@ -52,52 +52,52 @@
    <ul>
     <li>
      <a href="level_0/index.html">
-      level_0
+      level 0
      </a>
     </li>
     <li>
      <a href="level_1/index.html">
-      level_1
+      level 1
      </a>
     </li>
     <li>
      <a href="level_2/index.html">
-      level_2
+      level 2
      </a>
     </li>
     <li>
      <a href="level_3/index.html">
-      level_3
+      level 3
      </a>
     </li>
     <li>
      <a href="level_4/index.html">
-      level_4
+      level 4
      </a>
     </li>
     <li>
      <a href="level_5/index.html">
-      level_5
+      level 5
      </a>
     </li>
     <li>
      <a href="level_6/index.html">
-      level_6
+      level 6
      </a>
     </li>
     <li>
      <a href="level_7/index.html">
-      level_7
+      level 7
      </a>
     </li>
     <li>
      <a href="level_8/index.html">
-      level_8
+      level 8
      </a>
     </li>
     <li>
      <a href="level_9/index.html">
-      level_9
+      level 9
      </a>
     </li>
    </ul>
