--- a/campaign/spells/level_1/img/index.html
+++ b/campaign/spells/level_1/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="digested_goodest_berries.jpg">
-      digested_goodest_berries.jpg
+      digested goodest berries.jpg
      </a>
     </li>
    </ul>
