--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/img/index.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Elda_Reem_Passlands.jpg">
-      Elda_Reem_Passlands.jpg
+      Elda Reem Passlands.jpg
      </a>
     </li>
    </ul>
