--- a/campaign/locations/regions/Matella/Riava_Plateau/img/index.html
+++ b/campaign/locations/regions/Matella/Riava_Plateau/img/index.html
@@ -52,7 +52,7 @@
    <ul>
     <li>
      <a href="Riava_Plateau.jpg">
-      Riava_Plateau.jpg
+      Riava Plateau.jpg
      </a>
     </li>
    </ul>
