Added music option to html creaators

--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -425,5 +425,34 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=BJ5Q5T6Rnj8">
+       Westfall - Music &amp; Ambience | World of Warcraft
+      </a>
+      <a href="../../../../../music/Westfall__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=KyHl1YQH7xI
+">
+       The Barrens - Music &amp; Ambience | World of Warcraft Classic
+      </a>
+      <a href="../../../../../music/The_Barrens__Music_&amp;_Ambience__World_of_Warcraft_Classic.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
