--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
      </a>
     </li>
     <li>
+     <a href="music/index.html">
+      music
+     </a>
+    </li>
+    <li>
      <a href="templates/index.html">
       templates
      </a>
